--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,8 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href="https://fonts.googleapis.com/css?family=Merriweather|Montserrat:800|Montserrat|Raleway" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="css/owl.carousel.min.css">
+  <link rel="stylesheet" type="text/css" href="css/owl.theme.default.min.css">
 	<link rel="stylesheet" type="text/css" href="css/styles.css">	
 </head>
 <body>
@@ -203,36 +205,82 @@
 		<div class="wrapper">
 			<h3 class="page-caption">what they says</h3>
 			<h4 class="page-subcaption">Lorem ipsum dolor sit amet event landing template</h4>
-			<div class="says-items">
-				<div class="says-section-1">
-					<div class="says-image">
-						<img src="images/man.png" alt="team member man" class="says-photo">	
+			<div class="says-items owl-carousel owl-theme">
+				<div class="says-item">
+					<div class="says-section-1">
+						<div class="says-image">
+							<img src="images/team-1.png" alt="team member man" class="says-photo">	
+						</div>					
 					</div>
-					<div class="navigation-dots-says">
-						<i class="fas fa-circle"></i>
-						<i class="fas fa-circle"></i>
-						<i class="fas fa-circle"></i>
-						<i class="fas fa-circle"></i>
+					<div class="says-section-2">
+						<div class="says-article">
+							<h5 class="caption-article">MEGAN JOHNSON <span><i>/ DESIGNER</i></span></h5>
+							<p class="text-article">Lorem Ipsum is simply dummy text of the printing and you 
+							standard dummy know that text ever since the 1500s, when an unknown printer took a galley 
+							of type and scrambled it to make a type specimen book.Lorem ipsum dolor sit amet event landing 
+							template</p>															
+						</div>							
 					</div>
 				</div>
-				<div class="says-section-2">
-					<div class="says-article">
-						<h5 class="caption-article">AL RAYHAN <span><i>/ UI/UX DESIGNER</i></span></h5>
-						<p class="text-article">Lorem Ipsum is simply dummy text of the printing and you 
-						standard dummy know that text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-						<div class="says-raiting">
-							<img src="images/shape-2.png">
-							<img src="images/shape-2.png">
-							<img src="images/shape-2.png">
-							<img src="images/shape-2.png">
-							<img src="images/shape-2.png">
-						</div>										
+				<div class="says-item">
+					<div class="says-section-1">
+						<div class="says-image">
+							<img src="images/team-2.png" alt="team member man" class="says-photo">	
+						</div>					
 					</div>
-					<div class="says-navigation">
-						<i class="fas fa-angle-left says-navigation-item"></i>
-						<i class="fas fa-angle-right says-navigation-item"></i>
-					</div>		
-				</div>			
+					<div class="says-section-2">
+						<div class="says-article">
+							<h5 class="caption-article">AL RAYHAN <span><i>/ UI/UX DESIGNER</i></span></h5>
+							<p class="text-article">Lorem Ipsum is simply dummy text of the printing and you 
+							standard dummy know that text ever since the 1500s, when an unknown printer took a 
+							galley of type and scrambled it to make a type specimen book. Lorem ipsum dolor sit amet event landing template
+							when an unknown printer took</p>														
+						</div>							
+					</div>
+				</div>
+				<div class="says-item">
+					<div class="says-section-1">
+						<div class="says-image">
+							<img src="images/team-3.png" alt="team member man" class="says-photo">	
+						</div>					
+					</div>
+					<div class="says-section-2">
+						<div class="says-article">
+							<h5 class="caption-article">JASON REEDLEY <span><i>/ BACK-END DEVELOPER</i></span></h5>
+							<p class="text-article">Lorem Ipsum is simply dummy text of the printing and you 
+							standard dummy know that text ever since the 1500s, when an unknown printer took a galley of 
+							type and scrambled it to make a type specimen book.</p>															
+						</div>							
+					</div>
+				</div>
+				<div class="says-item">
+					<div class="says-section-1">
+						<div class="says-image">
+							<img src="images/team-4.png" alt="team member man" class="says-photo">	
+						</div>					
+					</div>
+					<div class="says-section-2">
+						<div class="says-article">
+							<h5 class="caption-article">KPEXA MAN <span><i>/ FRONT-END DEVELOPER</i></span></h5>
+							<p class="text-article">Lorem Ipsum is simply dummy text of the printing and you 
+							standard dummy know that text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>															
+						</div>							
+					</div>
+				</div>
+				<div class="says-item">
+					<div class="says-section-1">
+						<div class="says-image">
+							<img src="images/team-5.png" alt="team member man" class="says-photo">	
+						</div>					
+					</div>
+					<div class="says-section-2">
+						<div class="says-article">
+							<h5 class="caption-article">VIRGINIA COLSPAN <span><i>/ MANAGER</i></span></h5>
+							<p class="text-article">Lorem Ipsum is simply dummy text of the printing and you 
+							standard dummy know that text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>															
+						</div>							
+					</div>
+				</div>															
 			</div>						
 		</div>
 	</div>	
